Actually install the package before linting

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,8 @@ jobs:
           python-version: "3.7"
       - name: Install poetry
         run: make install_poetry
+      - name: Install
+        run: make prepare
       - name: Lint
         run: make lint
 
