--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ flake8 = ">=3.7.7"
 toml = ">=0.10"
 isort = ">=5.3"
 pytest-cov = ">=2.7.1"
+black = "^20.8b1"
 
 [tool.poetry.plugins] # Optional super table
 [tool.poetry.plugins."pytest11"]
