--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  lint-and-test:
     runs-on: ubuntu-latest
 
     services:
@@ -44,13 +44,3 @@ jobs:
         run: |
           . .venv/bin/activate
           make test
-
-
-
-
-
-
-
-
-
-
