Try fixing publishing #2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,8 +27,6 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - name: Run a one-line script
-        run: echo Hello, world!
       - uses: "actions/setup-python@v2"
         with:
           python-version: "3.7"
@@ -43,4 +41,4 @@ jobs:
       - name: Test
         run: |
           . .venv/bin/activate
-          make test
+          make publish
