--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "pytest_hoverfly"
-version = "4.0.1"
+version = "4.0.2"
 description = "Simplify working with Hoverfly from pytest"
-authors = ["Devops team <devops@team.wrike.com>"]
+authors = ["Devops team at Wrike <devops@team.wrike.com>"]
 repository = "https://github.com/wrike/pytest-hoverfly"
 license = "MIT"
 readme = "README.md"
@@ -16,9 +16,9 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.7"
 pytest = ">=5.0"
-requests = "^2.22.0"
-docker = "^4.2.0"
-typing_extensions = "^3.7.4"
+requests = ">=2.22.0"
+docker = ">=4.2.0"
+typing_extensions = ">=3.7.4"
 
 [tool.poetry.dev-dependencies]
 flake8 = ">=3.7.7"
@@ -27,7 +27,7 @@ isort = ">=5.3"
 pytest-cov = ">=2.7.1"
 black = "^20.8b1"
 
-[tool.poetry.plugins] # Optional super table
+[tool.poetry.plugins]
 [tool.poetry.plugins."pytest11"]
 "hoverfly" = "pytest_hoverfly.pytest_hoverfly"
 
