--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ flake8 = ">=3.7.7"
 toml = ">=0.10"
 isort = ">=5.3"
 pytest-cov = ">=2.7.1"
-black = "^20.8b1"
+black = "^22.8.0"
 
 [tool.poetry.plugins]
 [tool.poetry.plugins."pytest11"]
