--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pytest_hoverfly"
-version = "5.0.3"
+version = "5.0.4"
 description = "Simplify working with Hoverfly from pytest"
 authors = ["Devops team at Wrike <devops@team.wrike.com>"]
 repository = "https://github.com/wrike/pytest-hoverfly"
@@ -21,9 +21,9 @@ docker = ">=5.0.3"
 typing_extensions = ">=3.7.4"
 
 [tool.poetry.dev-dependencies]
-flake8 = ">=3.7.7"
+flake8 = "^5.0.4"
 toml = ">=0.10"
-isort = ">=5.3"
+isort = "^5.11"
 pytest-cov = ">=2.7.1"
 black = "^22.8.0"
 
