--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,8 @@
 [pytest]
 addopts =
     --disable-pytest-warnings
-    --strict
+    --strict-markers
+    --strict-config
+    --pythonwarnings error
     --quiet
     --no-cov-on-fail
